add section headings / toc to GS-extension

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -48,6 +48,7 @@ bookmarksopen=true]{hyperref}
 \date{\vskip-.1in \today}
 \maketitle
 
+\section{Groseclose and Snyder 1996}
 On Feb. 12, Sebastian and I agreed to focus efforts on finding a base model to facilitate empirical identification. I am pursuing Groseclose $\&$ Snyder (1996), ``Buying Supermajorities,'' APSR
 \begin{itemize}
 	\item For each legislator $i$, $v(i) = u_i(x) - u_i(s)$, measured in money; this is the reservation price of $i$
@@ -78,6 +79,7 @@ On Feb. 12, Sebastian and I agreed to focus efforts on finding a base model to f
 	\end{itemize}
 \end{itemize}
 
+\section{Our Extension to Uncertainty}
 \vskip.3in
 General thoughts on extension to uncertainty
 \begin{itemize}
@@ -104,6 +106,7 @@ General thoughts on extension to uncertainty
 		\end{itemize}
 \end{itemize}
 
+\subsection{Solving the Model}
 \vskip.3in
 Backward induction (legislature moves last; B makes last bribe; A makes first bribe)
 \begin{enumerate}
@@ -268,6 +271,7 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 		\end{itemize}
 \end{enumerate}
 
+\section{Discrete Model}
 \newpage
 Discrete version (Conversation between Kristy and Frank, 3/27/15)
 \begin{itemize}
@@ -390,6 +394,7 @@ Discrete version (Conversation between Kristy and Frank, 3/27/15)
 		\end{itemize}
 \end{itemize}
 
+\subsection{Math for Discrete Model}
 \newpage
 The math that follows from Equation \ref{eq:logistic}:
 \begin{itemize}
@@ -459,6 +464,7 @@ The math that follows from Equation \ref{eq:logistic}:
 		\]		
 \end{itemize}		
 
+\subsection{Second Order Condition}
 \vskip1in
 Perhaps more importantly, let's look at the second order condition (using the same substitutions at the top of the previous page). The first derivative of the objective function w.r.t. $b(-\frac{1}{2})$ is (in logistic form)
 \[
@@ -487,7 +493,8 @@ Now, the second derivative:
   W_B\left[\frac{e^{-X} + e^{-Y}}{\left(1+e^{-X}\right)\left(1+e^{-Y}\right)} \right] \left[ \frac{e^{-Z}}{\left(1+e^{-Z}\right)^3} \right] \left\{e^{-Z}-1 \right\}
 \]
 Everything except for the expression in the curly braces is positive. The expression in the curly braces is positive when $z\leq0$ and negative when $z\geq0$. So this objective function appears to have an inflection point at $z=0$.
-			
+
+\section{Some Comparative Statics}			
 \newpage
 Comparative statics
 \begin{itemize}
@@ -510,7 +517,7 @@ Comparative statics
 
 				  
 		
-
+\section{Notes from March}
 \newpage
 Notes from 3/16 Skype chat (Kristy and Sebastian)
 \begin{itemize}
