--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -569,7 +569,24 @@ Taking the derivative of this expression with respect to $b\left(0\right)$:
   W_B\frac{e^{-Y}}{\left(1+e^{-Y}\right)^2}\left[\frac{e^{-X}\left(e^{-2Z} - 1 \right)}{\left(1+e^{-X}\right)^2\left(1+e^{-Z}\right)^2} \right]
 \]
 
+\vskip.5in
+The SOCs when one non-negativity constraint binds; bordered Hessian is 4x4. \\
+		\begin{tabular}{cccc}
+			0 & $\frac{\partial g_1}{\partial b\left(-\frac{1}{2}\right)}$ & $\frac{\partial g_1}{\partial b\left(-0\right)}$ & $\frac{\partial g_1}{\partial b\left(\frac{1}{2}\right)}$ \\
+			$\frac{\partial g_1}{\partial b\left(-\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)^2}$ & $\frac{\partial^2 L}{\partial b(0)\partial b\left(-\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)\partial b\left(-\frac{1}{2}\right)}$  \\
+			$\frac{\partial g_1}{\partial b\left(0\right)}$ & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)\partial b\left(0\right)}$ & $\frac{\partial^2 L}{\partial b(0)^2}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)\partial b\left(0\right)}$ \\
+			$\frac{\partial g_1}{\partial b\left(\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)\partial b\left(\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b(0) \partial b\left(\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)^2}$
+		\end{tabular} \\
+		
+Evaluating the constraint terms:\\
+\begin{tabular}{cccc}
+			0 & -1 & 0 & 0 \\
+			-1 & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)^2}$ & $\frac{\partial^2 L}{\partial b(0)\partial b\left(-\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)\partial b\left(-\frac{1}{2}\right)}$  \\
+			0 & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)\partial b\left(0\right)}$ & $\frac{\partial^2 L}{\partial b(0)^2}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)\partial b\left(0\right)}$ \\
+			0 & $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)\partial b\left(\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b(0) \partial b\left(\frac{1}{2}\right)}$ & $\frac{\partial^2 L}{\partial b\left(\frac{1}{2}\right)^2}$
+		\end{tabular}
 
+The second order condition is on the last two principal minors. The largest must be negative. The next to last should then be positive.
 
 \newpage
 \section{Some Comparative Statics}			
