add eqn # and label for cross partial in SOCs

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -566,9 +566,10 @@ Taking the derivative of this expression with respect to $b\left(0\right)$:
 \[
   W_B\frac{e^{-Y}}{\left(1+e^{-Y}\right)^2}\left[\frac{e^{-X-2Z} - e^{-X}}{\left(1+e^{-X}\right)^2\left(1+e^{-Z}\right)^2} \right]
 \]
-\[
+\begin{equation}
   W_B\frac{e^{-Y}}{\left(1+e^{-Y}\right)^2}\left[\frac{e^{-X}\left(e^{-2Z} - 1 \right)}{\left(1+e^{-X}\right)^2\left(1+e^{-Z}\right)^2} \right]
-\]
+	\label{eq:xpartial}
+\end{equation}
 
 \vskip.5in
 The SOCs when one non-negativity constraint binds; bordered Hessian is 4x4. \\
