create section for numerical results in GS-extension

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -272,8 +272,8 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 		\end{itemize}
 \end{enumerate}
 
-\section{Discrete Model}
 \newpage
+\section{Discrete Model}
 Discrete version (Conversation between Kristy and Frank, 3/27/15)
 \begin{itemize}
 	\item Purpose: try to understand what the right objective function is. Does maximizing total probability also maximize the probability of winning?
@@ -665,6 +665,8 @@ Note that nothing useful seems to come out of trying to expand and then simplify
 			\end{itemize}
 \end{itemize}
 		
+\newpage
+\subsection{Numerical Results}		
 		
 \newpage
 \section{Some Comparative Statics}			
