--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -666,7 +666,87 @@ Note that nothing useful seems to come out of trying to expand and then simplify
 \end{itemize}
 		
 \newpage
-\subsection{Numerical Results}		
+\subsection{Numerical Results}	
+For all of these, $\beta = 1$ and there are three legislators with $b\in\left\{-\frac{1}{2},0,\frac{1}{2}\right\}$.
+
+\vskip.2in
+For $\al = -1.5$	
+	\begin{tabular}{crrrrr}
+			            & -2 & -1.5 						& -1\\
+			up to WB=19	&	0	&		0					 &	0 \\		
+			only WB = 20   	&	0	&0	& just a little
+	\end{tabular}
+
+\vskip.2in
+For $\al = -1.3$	
+	\begin{tabular}{crrrrr}
+			            & -1.8 & -1.3 						& -0.8\\
+			up to WB=15	&	0	&		0					 &	0 \\		
+			WB = 16 to 20   	&	0	&0	& just a little
+	\end{tabular}
+
+\vskip.2in
+For $\al = -1.1$	
+	\begin{tabular}{crrrrr}
+			            & -1.6 & -1.1 						& -0.6\\
+			up to WB=13	&	0	&		0					 &	0 \\		
+			WB = 14 to 15  & 	0& 0 &	just a little	\\
+			WB = 16 to 20   &	0& some, always increasing &	some + .5	\\
+	\end{tabular}
+
+\vskip.2in
+For $\al = -0.9$	
+	\begin{tabular}{crrrrr}
+			            & -1.4 & -0.9 						& -0.4\\
+			up to WB=11	&	0	&		0					 &	0 \\		
+			WB = 12 to 13  & 	0& 0 &	just a little	\\
+			WB = 14 to 19   &	0& some, always increasing &	some + .5	\\
+			WB = 20 & some & some + .5 & some + 1
+	\end{tabular}
+
+\vskip.2in
+For $\al = -0.6$	
+	\begin{tabular}{crrrrr}
+			            & -1.1 & -0.6 						& -0.1\\
+			up to WB=8	&	0	&		0					 &	0 \\		
+			WB = 9 to 10  & 	0& some &	0	\\
+			WB = 11 to 14   &	0& some, always increasing &	some + .5	\\
+			WB = 15 to 20 & some & some + .5 & some + 1
+	\end{tabular}
+		
+	\vskip.2in	
+		$\al = -0.6$ pattern holds to $\al = -0.2$
+
+\vskip.2in
+For $\al = -0.1$	
+	\begin{tabular}{crrrrr}
+			            & -0.6 & -0.1 						& 0.4\\
+			up to WB=7	&	0	&		0					 &	0 \\		
+			WB = 8   & 	0& some &	0	\\
+			WB = 9   &	some& some + .5&	0	\\
+			WB = 15 to 20 & some & some + .5 & some + 1
+	\end{tabular}
+	
+	\vskip.2in	
+		$\al = -0.1$ pattern holds to $\al = 0.5$ at least
+		
+\vskip.2in
+For $\al = 0.5$	
+	\begin{tabular}{crrrrr}
+			            & 0.0 & 0.5 						& 1.0\\
+			up to WB=8	&	0	&		0					 &	0 \\		
+			WB = 9 to 11  & 	$>1$& $>1+.5$ &	0	\\
+			WB = 12 to 20 & significant & significant + .5 & significant + 1
+	\end{tabular}
+
+\vskip.2in
+For $\al = 1.1$	
+	\begin{tabular}{crrrrr}
+			            & 0.6 & 1.1 						& 1.6\\
+			up to WB=13	&	0	&		0					 &	0 \\		
+			WB = 9 to 20  & 	$>2$& $>2+.5$ &	0
+	\end{tabular}
+
 		
 \newpage
 \section{Some Comparative Statics}			
