add a bit of intuition about see-saw

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -664,6 +664,12 @@ Note that nothing useful seems to come out of trying to expand and then simplify
 				\item If $\al$ is negative enough, bribe only legislator furthest to the left (most against B)
 			\end{itemize}
 \end{itemize}
+
+\vskip.2in
+Pattern more or less is to get the guy who is WHAT?
+\begin{itemize}
+	\item Imagine a see-saw; these guys are weights on the see-saw.
+\end{itemize}
 		
 \newpage
 \subsection{Numerical Results}	
