fill in central numerical example of al = 0

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -753,6 +753,17 @@ For $\al = 1.1$
 			WB = 9 to 20  & 	$>2$& $>2+.5$ &	0
 	\end{tabular}
 
+		\vskip.5in
+Going to explore in-depth case of $\al = 0.0$	\\
+	\begin{tabular}{crrrrr}
+			            & -0.5 & 0.0 						& 0.5\\
+			up to WB=7	&	0	&		0					 &	0 \\		
+			WB = 8    & 	0&  some &	0	\\
+			WB = 9   & 	some & some + .5 &	0	\\
+			WB = 10 to 20 & some & some + .5 & some + 1
+	\end{tabular}
+
+		
 		
 \newpage
 \section{Some Comparative Statics}			
