add guidance at top of numerical results

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -765,6 +765,10 @@ Evaluating the constraint terms:\\
 \newpage
 \subsection{Numerical Results}	
 For all of these, $\beta = 1$ and there are three legislators with $b\in\left\{-\frac{1}{2},0,\frac{1}{2}\right\}$.
+\begin{itemize}
+	\item Below, the column headings are $v(z)$ before the bribe.
+	\item That is, from left to right, $-Z,-Y,-X$.
+\end{itemize}
 
 \vskip.2in
 For $\al = -1.5$	
